<resources>
    <string name="app_name">Consumer App</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="company_name">Company</string>
    <string name="detail_user">Detail User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repository">Repository</string>
    <string name="number_repo">0</string>
    <string name="following">following</string>
    <string name="number_following">0</string>
    <string name="followers">followers</string>
    <string name="number_followers">0</string>
    <string name="followers_title">Followers</string>
    <string name="following_title">Following</string>
    <string name="favorite_user">Favorite User</string>
    <string name="notification">Notification</string>
    <string name="reminder">Reminder at 9.00 AM</string>
    <string name="language">Language</string>
    <string name="summary">English</string>
    <string name="select_language">Select a Language</string>
    <string name="setting">Setting</string>
    <string name="notif">Github Notification</string>
    <string name="text_notif">Find your developers on github</string>
</resources>


